    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)

------------------------------------------------------------------------------
10/21/2023 IAlibay, orbeckst

  * 1.0.2

  Changes

  * Python 3.12 is now supported


  Fixes

  * updated versioneer to be able to run under Python 3.12 (#124, PR #128)
        

05/24/2022 IAlibay

  * 1.0.1

  Changes

  * Deployment is now automatically done using github actions.

  Fixes

  * Version 1.0.0 would allow for installations to be made with python versions
    < 3.8, resulting in incorrect builds. The setup configuration has now been
    altered to avoid this (Issue #112)


05/21/2022 orbeckst, IAlibay

  * 1.0.0

  Changes

  * API-stable release
  * deprecated and buggy CCP4 module was removed (#107, #50)
  * gridDataFormats now follows NEP29 (#102)
  * removed support for Python 2.7 and Python <3.8 (#102)


02/20/2022 orbeckst, tluchko, IAlibay

  * 0.7.0

  Changes

  * Python 3.10 is supported (issue #101)

  Enhancements

  * use mrcfile library to parse MRC files (including CCP4) using the
    new mrc.MRC class (issue #83)

  Fixes

  * The new mrc module correctly reorients the coordinate system based
    on mapc, mapr, maps and correctly calculates the origin (issue #76)
  * documented Grid attributes, including axis convention (issue #69)

  Deprecations

  * The CCP4 module (replaced by mrc) will be removed in 1.0.0


10/10/2021 eloyfelix, renehamburger1993, lilyminium, jvermaas, xiki-tempula,
           IAlibay, orbeckst

  * 0.6.0

  Changes

  * macOS and Windows are also tested (min and max supported Python, #97)
  * switched CI to using GitHub actions (#86)

  Enhancements

  * Allow parsing/writing gzipped DX files (PR #70, #99)
  * Update doc theme to use sphinx-rtd-theme (#80)
  * Delta of OpenDX writes 7 significant figures (#88)

  Fixes

  * fix initialization of mutable instance variable of Grid class (metadata dict) (#71)